[project]
name = "clargparser"
requires-python = ">=3.12"
version = "0.0.1"

[tool.mypy]
python_version = "3.12"
strict = true
warn_no_return = true
warn_unreachable = true

[tool.pyrefly]
preset = "strict"
python-version = "3.12"

[tool.pyright]
pythonVersion = "3.12"
reportImplicitOverride = true
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
ignore = [
  "ANN401", # any-type
  "COM812", # missing-trailing-comma
  "D", # pydocstyle
  "DOC", # pydoclint
  "PLR0913", # too-many-arguments
  "S101", # assert
]
select = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "INP001", # implicit-namespace-package
  "S101", # assert
]

[tool.tomlsort]
all = true
trailing_comma_inline_array = true
